@startuml

Policia -up> Ciudad
Policia o-> "1" Rango
Policia ..> Reloj
Rango .> Reloj
Rango .> Ciudad
Posicion "1" --o Ciudad


interface Rango {
    {abstract} + viajar(c: Ciudad,  r : Reloj) : void
}

class Policia {
    + visitar(edificio: Edificio, r : Reloj): Pista
    + viajar(destino : Ciudad , r : Reloj): void
    + dormir( r : Reloj) : void
}

class Ciudad {
    + tiempoViaje(destino : Ciudad, velocidad : double): double
    - calcularDistanciaCon(ciudad : Ciudad): double
    - calcularDistancia(posicion : Posicion)): double
}

class Posicion {
    - latitud: double
    - longitud: double
    + calcularDistanciaCon(posicion : Posicion): double
    - calcularDistancia(latitud : double, longitud : double): double
}

class Reloj{
    - tiempoTranscurrido: Tiempo
    - tiempoMaximo: Tiempo
    + incrementar(tiempo : Tiempo): void
    - verificarTiempoExcedido() : void
}

@enduml

